<resources>
    <string name="app_name">FirstApp</string>
    <string name="next">Next</string>
    <string name="status_permission">statusPermission</string>
    <string name="enable_location">Enable Location</string>
    <string name="icon_location_status">icon location status</string>
    <string name="status_internet">status Internet</string>
    <string name="grant_permissions">Grant permissions</string>
    <string name="welcome_screen_title">Before we start we need some configurations</string>
    <string name="internet_connection">Internet Connection</string>
</resources>